# coursework_03

./: .gitignore  README.MD  database.ini  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_class_api_py.html  z_145eef247bfb46b6_class_sql_py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_db_create_py.html  z_145eef247bfb46b6_db_load_py.html  z_145eef247bfb46b6_interactions_user_py.html  z_145eef247bfb46b6_utils_py.html
src/: class_api.py  class_sql.py  config.py  db_create.py  db_load.py  interactions_user.py  utils.py
tests/: test_class_api.py  test_class_sql.py  test_db_create.py  test_db_load.py  test_interactions_user.py  test_utils.py
