[project]
name = "coursework-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "types-colorama (>=0.4.15.20250801,<0.5.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv', 'tests/']

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.flake8]
max-line-length = 119
exclude = ".git"